--- a/AULA 15/index.html
+++ b/AULA 15/index.html
@@ -6,42 +6,63 @@
     <title>Document</title>
     <style>
       body {
-        background-color: #f0f0f0;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
+      background: #969393;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
       .amarelo {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
       }
       .editar {
         text-align: center;
         font-size: 14px;
         border: 1px solid black;
-        border-radius: 5px;
-        padding: 20px;
+        border-radius: 44px;
+        padding: 17px;
         background-color: white;
+        width: 10%;
+       
+      }
+      .editar:hover {
+        background-color: #c0bfbf;
       }
       .editar a {
         text-decoration: none;
+        width: 30%;
+
       }
       .verde {
         text-align: center;
       }
       .rosa {
       }
-      vermelho {
-        background-color: #ffcccc;
+      .vermelho {
+       
         padding: 20px;
         border-radius: 10px;
+      }
+      .foto {
+        width: 79px;
+        height: 80px;
+        border-radius: 50%;
+        object-fit: cover;
+       color: rgb(255, 0, 0);
+        border-radius: 50%;
       }
     </style>
   </head>
   <body>
     <div class="vermelho">
       <div class="rosa">
+        <img
+          class="foto"
+          src="https://avatars.githubusercontent.com/u/9919?s=280&v=4"
+          alt="Foto de perfil"
+
         <h1>Perfil</h1>
         <div class="verde">
           <div class="amarelo">
